# Reversi

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  pytest.ini
.github/workflows/: deploy.yml  python-check-reusable.yml  python-quality.yml  rust-quality.yml  test.yml  web-quality.yml
docs/: DESIGN.md  REQUIREMENTS.md  TASKS.md
python/: board.py  convert_model.py  export_model.py  ntuple.py  requirements.txt  rust_training.py  td_lambda.py  train.py
python/rust_training_ext/: Cargo.toml
python/rust_training_ext/src/: lib.rs
python/tests/: test_board.py  test_convert_model.py  test_export_model.py  test_ntuple.py  test_rust_training.py  test_td_lambda.py  test_train.py
rust/: Cargo.toml  build.rs
rust/src/: board.rs  game.rs  lib.rs  training.rs  types.rs
rust/src/ai/: mod.rs  ntuple.rs  search.rs
rust/tests/: playthrough_and_determinism.rs
scripts/: train-model.ps1  train-model.sh
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: app.e2e.spec.ts  compat.e2e.spec.ts  helpers.ts
web/scripts/: build-wasm.mjs  build-web.mjs  check-wasm-size.mjs
web/src/: App.css  App.test.tsx  App.tsx  demoAi.ts  index.css  main.tsx
web/src/components/: Board.test.tsx  Board.tsx  Cell.tsx  GameInfo.test.tsx  GameInfo.tsx  LevelSelect.test.tsx  LevelSelect.tsx  ResultModal.test.tsx  ResultModal.tsx
web/src/constants/: accessibility.ts
web/src/hooks/: useGame.test.tsx  useGame.ts
web/src/styles/: Board.module.css  Cell.module.css  (+3 more)
(+6 files in other folders)
