[package]
name = "reversi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
once_cell = "1.21"
crc32fast = "1.4"
web-time = "1.1"
zstd = { version = "0.13", default-features = false, features = ["wasm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"

